Added page structures

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Online Resume</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm SuperIcon.</p>
+	<header class="header">
+	</header>
+	<section class="about">
+	</section>
+	<section class="education">
+	</section>
+	<section class="honors">
+	</section>
+	<section class="personal_experience">
+	</section>
+	<section class="teaching_experience">
+	</section>
+	<section class="addition_skill">
+	</section>
+	<footer class="footer">
+	</footer>
 </body>
 </html>
