--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
 	<header class="header">
+		<p class="site-title-sub">JUNG HSIANG LEE</p>
+		<h1 class="site-info">skype | email</h1>
+		
+		<div class="buttons">
+			<a class="button button-about" href=#about></a>
+			<a class="button button-education" href=#education></a>
+			<a class="button button-honor" href=#honors></a>
+			<a class="button button-personal_experience" href=#personal_experience></a>
+			<a class="button button-teaching_experience" href=#teaching_experience></a>
+			<a class="button button-additional_skill" href=#addition_skill></a>
+		</div>
 	</header>
 	<section class="about">
 	</section>
@@ -18,7 +29,7 @@
 	</section>
 	<section class="teaching_experience">
 	</section>
-	<section class="addition_skill">
+	<section class="additional_skill">
 	</section>
 	<footer class="footer">
 	</footer>
