Added page tiltle icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Online Resume</title>
+	<link rel="icon" href="images/resume/resume.png">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
