--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header class="header">
 		<p class="site-title-sub">JUNG HSIANG LEE</p>
-		<h1 class="site-info">skype | email</h1>
+		<h1 class="site-info">Cell phone number | email address</h1>
 		
 		<div class="buttons">
 			<a class="button button-about" href=#about></a>
@@ -17,12 +17,19 @@
 			<a class="button button-honor" href=#honors></a>
 			<a class="button button-personal_experience" href=#personal_experience></a>
 			<a class="button button-teaching_experience" href=#teaching_experience></a>
-			<a class="button button-additional_skill" href=#addition_skill></a>
+			<a class="button button-additional_skill" href=#additional_skill></a>
 		</div>
 	</header>
-	<section class="about">
+	<section class="about" id="about">
+		<h2 class="heading">ABOUT ME</h2>
+		<p class="about-text"> 
+		    Hello, I'm JUNG HSIANG LEE.
+		</p>
 	</section>
-	<section class="education">
+	<section class="education" id="education">
+		<h2 class="heading">Education</h2>
+		<a class="master"></a>
+		<a class="bachelor"></a>
 	</section>
 	<section class="honors">
 	</section>
