--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 	</section>
 	<section class="education" id="education">
 		<h2 class="heading">Education</h2>
-		<a class="master"></a>
-		<a class="bachelor"></a>
+		<div class="dmaster">
+			<a class="master"></a>
+		</div>
+		<div class="dbachelor">
+			<a class="bachelor"></a>
+		</div>
 	</section>
 	<section class="honors">
 	</section>
